Add new signup endpoint
